# navigation-mappo-rl

./: .gitignore  :w  CODING_ADAPTATION.md  README.md  RL_CODING_TOOLS.md  callbacks.py  debug_termination.py  inference.py  main.py  play_best_policy.py  pyproject.toml  resources  test_ray_intersection.py  train.py  train_mappo.py  train_sb3.py
coding_rl/: CODING_EXPERIMENT.md  OSS_CODING_ENVS.md  PUFFERLIB_CODING.md  agent.py  experiment_data.jsonl  memory.py  problems.py  run_experiment.py
coding_rl/external_envs/: demo_intercode.py
coding_rl/puffer_experiment/: demo.py  env.py
configs/: basic_env.yaml  basic_marl.yaml  circle_marl.yaml  four_crossing.yaml  hallway.yaml  large_population.yaml  moving_env.yaml  moving_env_marl.yaml  two_crossing_group_enc.yaml  two_crossing_longvison.yaml
docs/: 00_quickstart.md  01_introduction.md  02_environment_design.md  03_agent_architecture.md  04_training_single_agent.md  05_multi_agent_training.md  06_advanced_scripts.md  README.md
nav/: config_models.py  environment.py  live_renderer.py  obstacles.py  ray_intersection.py  renderer_models.py  utils.py
networks/: actor_critic_network.py
rl/: mappo.py  ppo.py  rollout_buffer.py  rollout_buffer_with_states.py  vectorized_env.py
rl/logs/2/: events.out.tfevents.1752551279.Mac.85680.0  events.out.tfevents.1752551288.Mac.85965.0  events.out.tfevents.1752551427.Mac.86499.0  events.out.tfevents.1752551498.Mac.87127.0  events.out.tfevents.1752551516.Mac.87295.0  events.out.tfevents.1752551896.Avisheks-MacBook-Pro.local.89340.0  (+1 more)
rl/models/CartPole-v0_best/: config.json  (+1 more)
(+11 files in other folders)
